--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,7 +5,7 @@ on:
       tag:
         description: "The tag version you want to build"
   schedule:
-    - cron: "0 8 12 * *"
+    - cron: "0 0 */3 * *"
 jobs:
   build:
     name: Build
@@ -34,6 +34,7 @@ jobs:
         run: |
           sha256sum geoip.db > geoip.db.sha256sum
           sha256sum geoip-cn.db > geoip-cn.db.sha256sum
+          sha256sum geoip-cn.txt > geoip-cn.txt.sha256sum
       - name: Release release branch
         if: steps.build.outputs.skip != 'true'
         run: .github/release-branch.sh
@@ -42,6 +43,7 @@ jobs:
       - uses: dev-drprasad/delete-older-releases@v0.3.2
         with:
           keep_latest: 3
+          delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release geoip
@@ -54,3 +56,5 @@ jobs:
             geoip.db.sha256sum
             geoip-cn.db
             geoip-cn.db.sha256sum
+            geoip-cn.txt
+            geoip-cn.txt.sha256sum
